fix: Fixeed the aggregation behind the charts

--- a/app/globals.css
+++ b/app/globals.css
@@ -271,7 +271,7 @@
   }
   .my-grid {
     grid-auto-rows: min-content;
-    grid-template-rows: auto 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
